hphp/hack/test/typecheck/iface_require_incompat4.php.exp
File "iface_require_incompat4.php", line 15, characters 11-12:
Class I3 does not correctly implement all required members  (Typing[4340])
File "iface_require_incompat4.php", line 15, characters 26-27:
Some members are incompatible with those declared in type I2
Read the following to see why:
File "iface_require_incompat4.php", line 4, characters 13-14:
Member x has the wrong type
File "iface_require_incompat4.php", line 4, characters 13-14:
Typing error
File "iface_require_incompat4.php", line 12, characters 25-29:
Expected float
File "iface_require_incompat4.php", line 4, characters 11-11:
  via this generic T
File "iface_require_incompat4.php", line 8, characters 25-27:
But got int
File "iface_require_incompat4.php", line 4, characters 11-11:
  via this generic T
